--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Website</title>
+    <title>first site</title>
 </head>
 <body>
 <div><h1>Привет!</h1>
@@ -19,7 +19,7 @@
 </div>
 <div>
     <img
-        src="./img.png"
+        src="./img.jpg"
         alt="даун"
         width="735">
 </div>
